--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
+    "axios": "^1.6.8",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.322.0",
     "next": "14.1.4",
