--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.8",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.322.0",
+    "mongodb": "^6.6.0",
     "next": "14.1.4",
     "postcss": "^8.4.21",
     "react": "18.2.0",
